hphp/hack/test/typecheck/goto/goto_lambda.php.exp
File "goto_lambda.php", line 4, characters 8-13:
Undefined goto label: LAMBDA (Naming[2073])
